<resources>
    <string name="app_name">TestKarpenkoAlex</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contacts">Home Page</string>
    <string name="user">Profile</string>
    <string name="video_graph">Video label</string>
    <string name="second_fragment_label">Profile Screen</string>
    <string name="user_test">User Test</string>
    <string name="following">Following</string>
    <string name="fans_count">Fans</string>
    <string name="video_count">%d videos</string>
    <string name="editProfile">Edit Profile</string>
    <string name="not_bio">Not bio yet</string>
    <string name="user_name">User name</string>
    <string name="hearts">Hearts</string>
    <string name="error_loading">Error loading</string>
    <string name="error_saving">Error saving</string>
    <string name="save_completed">Save completed</string>
    <string name="share">Share</string>
    <string name="user_name_video">user name %s</string>
    <string name="likes_counter">Likes %d</string>
    <string name="video_comments">Comments %d</string>
    <string name="share_url">Share link</string>
    <string name="send">Send</string>
    <string name="comment_video">Comment</string>
    <string name="company">Company</string>
    <string name="name_video">Name movie</string>
    <string name="liked_video">Liked Video</string>
    <string name="like">Like</string>
</resources>